a1/brendan_gordon/TEST_PROGRAMS/invalidtype/xiru_zhu/invalid4.min
var test: float;
var test1: string;

test1 = test1 +- test1 - test1 -- test1 + test; #valid

